# AI-Lawyer-chatbot-with-DeepseekR1

./: RAG_pipeline.py  README.md  frontend.py  hello.py  pyproject.toml  vector_database.py
vectorstore/database/: index.faiss  index.pkl
