[project]
name = "ai-lawyer-chatbot-with-deepseekr1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.37",
    "langchain-groq>=0.2.4",
    "langchain-ollama>=0.2.3",
    "ollama>=0.4.7",
    "pdfplumber>=0.11.5",
    "streamlit>=1.42.2",
]
